<resources>
    <string name="app_name">TodoApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="header">Things To Do</string>
    <string name="sub_header">Complete These Tasks !</string>
    <string name="add_task_button">Add Task</string>
    <string name="delete_all_floating_button">Delete All</string>
    <string name="task_title_detail">Title</string>
    <string name="task_calender">Calender</string>
    <string name="task_detail_detail">Detail</string>
    <string name="update_btn">Update</string>
    <string name="delete_btn">Delete</string>
</resources>